--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
     "name": "@m4xdev/vector",
-    "version": "0.0.1",
-    "description": "A simple vector 2D/3D library.",
+    "version": "0.0.2",
+    "description": "A simple vector 3D library.",
     "author": "Maxwell DeVos",
     "license": "ISC",
     "keywords": [
         "vector",
         "vectors",
+        "vector1d",
         "vector2d",
         "vector3d",
         "immutable"
     ],
     "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "dist",
+        "!dist/tsconfig.tsbuildinfo"
+    ],
     "type": "module",
     "scripts": {
         "build": "tsc",
@@ -35,5 +41,13 @@
         "prettier": "^2.8.4",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
-    }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/maxdevos49/vector.git"
+    },
+    "bugs": {
+        "url": "https://github.com/maxdevos49/vector/issues"
+    },
+    "homepage": "https://github.com/maxdevos49/vector#readme"
 }
