--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "coverage": "npm run test && open coverage/lcov-report/index.html",
         "format": "prettier --config .prettierrc.json './src/**/*' --write",
         "lint": "eslint './**/*.ts' --fix",
-        "clean": "rm -rf dist coverage"
+        "clean": "rm -rf dist coverage",
+        "prepublish": "npm run clean && npm run format && npm run lint && npm run build && npm run test",
+        "publish": "npm publish --access public"
     },
     "devDependencies": {
         "@types/mocha": "^10.0.1",
